# jj-spice

./: .gitignore  .goreleaser.yaml  404.html  Cargo.toml  README.md  deny.toml  index.html  mkdocs.yml  sitemap.xml
.cargo/: config-ci.toml
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.github/workflows/: ci.yml  release.yml
cli/: Cargo.toml
cli/src/: commands.rs  main.rs
cli/src/commands/: cli.rs  env.rs  stack_log.rs  stack_submit.rs  stack_sync.rs
docs/: index.md  installation-and-setup.md  robots.txt
docs/references/: configuration.md
installation-and-setup/: index.html
lib/: Cargo.toml
lib/gen-protos/: Cargo.toml
lib/gen-protos/src/: main.rs
lib/src/: bookmark.rs  comments.rs  forge.rs  lib.rs  protos.rs  store.rs
lib/src/bookmark/: graph.rs
lib/src/forge/: detect.rs  github.rs  gitlab.rs
lib/src/protos/: change_request.proto  change_request.rs
lib/src/store/: change_request.rs
references/configuration/: index.html
search/: search_index.json
src/: bookmark.rs  bookmark_graph.rs  cli.rs  commands.rs  forge.rs  main.rs  protos.rs  stack_sync.rs  store.rs
src/bookmark/: graph.rs
src/commands/: cli.rs  env.rs  mod.rs  stack_log.rs  stack_submit.rs  stack_sync.rs  submit.rs
src/forge/: detect.rs  github.rs
src/protos/: change_request.proto  change_request.rs
src/store/: change_request.rs
