[workspace]
resolver = "3"
members = ["cli", "lib", "lib/gen-protos"]

[workspace.package]
version = "0.1.0"
edition = "2024"
license = "Apache-2.0"

[workspace.dependencies]
jj-spice-lib = { path = "lib", version = "0.1.0" }

chrono = { version = "0.4", default-features = false, features = ["clock"] }
clap = { version = "4.5.60", features = ["derive"] }
clap_complete = { version = "4.5", features = ["unstable-dynamic"] }
clap_complete_nushell = "4.5"
dunce = "1"
gix = { version = "0.78.0", default-features = false }
itertools = "0.14.0"
jj-cli = "0.38.0"
jj-lib = "0.38.0"
octocrab = "0.49.5"
prost = "0.14"
ratatui = { version = "0.30.0", default-features = false, features = ["termion"] }
tempfile = "3"
termion = "4.0.6"
thiserror = "2"
tokio = { version = "1", features = ["macros", "rt-multi-thread"] }
url = "2"

serde_json = "1"
wiremock = "0.6"
